--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,12 @@ publish = false
 [lib]
 
 [dependencies]
-shuttle-service = { version = "0.10.0", features = ["web-salvo"] }
-salvo = { version = "0.37.9", features = ["cors"] }
-tokio = { version = "1", features = ["macros"] }
+shuttle-service = { version = "0.10.0", features = ["web-actix-web"] }
+actix-web = "4.3.0"
+actix-cors = "0.6.4"
+shuttle-shared-db = { version = "0.10.0", features = ["postgres"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-once_cell = "1"
 sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-dotenv = "0.15.0"
-shuttle-shared-db = { version = "0.10.0", features = ["postgres"] }
